<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ProgressBar
        android:id="@+id/signInProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:theme="@style/MyProgressbar"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome,"
            android:textColor="@color/design_default_color_error"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in to continue!"
            android:textColor="@color/design_default_color_error"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email Address"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUInPasswordLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/signInBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="Sign In"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:id="@+id/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you are a new user ?"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@color/design_default_color_error"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>


    </LinearLayout>

</RelativeLayout>