<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:theme="@style/MyProgressbar"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome,"
            android:textColor="@color/design_default_color_error"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up to continue!"
            android:textColor="@color/design_default_color_error"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Name"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email Address"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Phone Number"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpPasswordLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpCPasswordLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpCPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Confirm Password"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="Sign Up"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ?"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/design_default_color_error"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>


    </LinearLayout>

</RelativeLayout>